--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up Git to use the token
       run: |
-        git config user.name "cresolindiateam"
-        git config user.email "nitesh@cresol.in"
-        git remote set-url origin https://x-access-token:${{ secrets.CICD }}@github.com/cresolindiateam/cicddemo.git
+        git config user.name "vanshmishradev"
+        git config user.email "vvvvvansh@gmail.com"
+        git remote set-url origin https://x-access-token:${{ secrets.CICD }}@github.com/vanshmishradev/VANSH.git
     - name: Create and push to deployment branch
       run: |
         git checkout -b deployment-branch
